k8s/apps/authelia/referencegrants.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-securitypolicy-from-tailscale-agent
  namespace: authelia
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: tailscale-agent
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: monitoring
  to:
    - group: ""
      kind: Service
      name: authelia
