k8s/apps/authelia/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
spec:
  parentRefs:
    - name: shared
      namespace: default
  hostnames:
    - auth.juliamertz.dev
    - auth.merlijnvoncken.nl
    - auth.merlijnvoncken.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia
          port: 80
    - backendRefs:
        - group: ""
          kind: Service
          name: theme-park
          namespace: theme-park
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /themepark
